<resources>
    <string name="app_name">Course Deal</string>
    <string name="username_hint_input">USERNAME</string>
    <string name="password_hint_input">PASSWORD</string>
    <string name="login_text_button">LOGIN</string>
    <string name="login_error_title">Login Error</string>
    <string name="ok_text_button">OK</string>
    <string name="no_internet_title">NO INTERNET CONNECTION</string>
    <string name="no_internet_message">Please enable your internet connection to continue using this app</string>
    <string name="empty_email_password_warning_text">"Email and password cannot be empty</string>
    <string name="email_hint_input">EMAIL</string>
    <string name="invalid_email_format_warning_text">Email address is not valid, re-check it !!!</string>
    <string name="error_status_code_500">Got 500 error code, internal server error</string>
    <string name="error_status_code_401">The username or password is not correct !!!</string>
    <string name="error_token_is_null">Token is null</string>
    <string name="error_status_code_400">Bad request: %s</string>
    <string name="error_unknown_status_code">Unknown error with status code %s</string>
    <string name="string_title_home_menu">HOME</string>
    <string name="title_course_menu">COURSE</string>
    <string name="title_profile_menu">PROFILE</string>
    <string name="search_here_hint_search">Search courses</string>
    <string name="few_student">%d student</string>
    <string name="lots_of_student">%d students</string>
    <string name="thousand_students">%dK students</string>
    <string name="few_content_length">%dm</string>
    <string name="lots_of_content_length">%dm</string>
    <string name="hours_content_length">%sh</string>
    <string name="text_practice_test">Practice Test</string>
    <string name="unknown_content_length">unknown</string>
    <string name="few_minute_left">%d minute</string>
    <string name="lots_of_minutes_left">%d minutes</string>
    <string name="lots_of_hours_left">%d hours</string>
    <string name="lots_of_days_left">%d days</string>
    <string name="unknown_time_left">unknown</string>
    <string name="few_minute_ago">just now</string>
    <string name="lots_of_minutes_ago">%d minutes ago</string>
    <string name="lots_of_hours_ago">%d hours ago</string>
    <string name="lots_of_days_ago">%d days ago</string>
    <string name="unknown_time_ago">unknown</string>
    <string name="error_fetch_status_code_500">Got 500 error code, internal server error</string>
    <string name="error_fetch_status_code_401">Problem with authentication</string>
    <string name="error_fetch_result_is_null">Response is null</string>
    <string name="error_fetch_status_code_400">Bad request: %s</string>
    <string name="fetch_error_title">Fetching Data Error</string>
    <string name="jwt_token_is_expired_warning_text">Token is expired. Login Again !!!</string>
    <string name="text_loading_students">LOADING STUDENT</string>
    <string name="text_loading_review">LOADING REVIEW</string>
    <string name="text_loading_preview">LOADING PREVIEW</string>
    <string name="text_coupons_left">Coupons left</string>
    <string name="text_content_length">Content length</string>
    <string name="text_course_level">Level</string>
    <string name="text_language">Language</string>
    <string name="header_heading">HEADING</string>
    <string name="header_description">DESCRIPTION</string>
    <string name="text_button_share">Share</string>
    <string name="text_button_enroll_now">Enroll Now</string>
    <string name="loading_review_text">LOADING REVIEW</string>
    <string name="loading_student_text">LOADING STUDENT</string>
    <string name="few_review">%d review</string>
    <string name="lots_of_review">%d reviews</string>
    <string name="thousands_reviews">%dK reviews</string>
    <string name="coupon_detail_error_title">Fetching Data Error</string>
    <string name="error_fetching_null_coupon">Unexpected error, try again !!!</string>
    <string name="dialog_loading_text">LOADING COUPON DETAILS</string>
    <string name="loading_enroll_page_text">LOADING ENROLL WEBSITE</string>
    <string name="coupon_your_courses_error_title">FAILED TO  LOAD YOUR COURSES</string>
    <string name="loading_your_courses_page_text">LOADING YOUR COURSES WEBSITE</string>
    <string name="enable_dark_mode_switch_text">Dark Mode</string>
    <string name="enable_finger_print_switch_text">Fingerprint / Face ID</string>
    <string name="logout_button_text">Log Out</string>
    <string name="prompt_info_title">Fingerprint Authentication</string>
    <string name="prompt_info_description">Save your time with just click</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="login_with_fingerprint_text">LOGIN WITH FINGERPRINT</string>
    <string name="submit_deal">Submit</string>
    <string name="stat_deals">%1$d deals</string>
    <string name="stat_matching_deals">Matching %1$d/%2$d deals</string>
    <string name="stat_updated">· Updated %1$s</string>
    <string name="stat_fetched">· Fetched %1$s</string>
    <string name="empty_state_message">No courses matching your criteria</string>
    <string name="btn_reset_filters">Reset Filters</string>
    <string name="btn_clear">Clear</string>
    <string name="fav_cats_title">Favorite Categories</string>
    <string name="fav_kws_title">Favorite Keywords</string>
    <string name="kw_hint">Add keyword</string>
    <string name="settings_title">Settings</string>
    <string name="notif_master">Notifications</string>
    <string name="notif_cat">Favorite category</string>
    <string name="notif_kw">Favorite keyword</string>
    <string name="notif_hot">Hot deals</string>
    <string name="dev_email">coursedeals@thanh0x.com</string>
    <string name="dev_website">https://thanh0x.com</string>
    <string name="auth_headline">Course Deal</string>
    <string name="auth_subhead">Access the app via</string>
    <string name="auth_btn_google">Continue with Google</string>
    <string name="auth_btn_apple">Continue with Apple</string>
    <string name="auth_btn_fingerprint">Continue with Fingerprint</string>
    <string name="filter_title">Filter</string>
    <string name="filter_rating">Minimum Rating</string>
    <string name="filter_rating_any">Any Rating</string>
    <string name="filter_rating_max">5.0</string>
    <string name="filter_rating_format">%1$.1f+ Stars</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_apply">Apply</string>
    <string name="lang_label">Language</string>
    <string name="lang_all">All</string>
    <string name="lang_english">English</string>
    <string name="lang_others">Others</string>
    <string name="sort_label">Sort by</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_students">Students</string>
    <string name="sort_reviews">Reviews</string>
    <string name="sort_expiring">Expiring Soon</string>
    <string name="sort_newest">Newest</string>
    <string name="cat_1">Development</string>
    <string name="cat_2">Design</string>
    <string name="cat_3">Business</string>
    <string name="cat_4">IT &amp; Software</string>
    <string name="cat_5">Marketing</string>
    <string name="cat_6">Personal Development</string>
    <string name="cat_7">Photography</string>
    <string name="cat_8">Music</string>
    <string name="cat_9">Health &amp; Fitness</string>
    <string name="cat_10">Finance</string>
    <string name="btn_done">Done</string>
    <string name="kw_add_trigger">Add Keyword</string>
    <string name="submit_deal_title">Submit a Deal</string>
    <string name="submit_deal_subhead">Enter the Udemy course URL with the coupon code included.</string>
    <string name="url_hint">Course URL</string>
    <string name="url_error_invalid">Please enter a valid Udemy URL</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="submit_success_msg">Deal submitted successfully! It will be reviewed soon.</string>
    <string name="report_title">Report this deal</string>
    <string name="report_reason_not_free">Not free</string>
    <string name="report_reason_no_data">No data</string>
    <string name="report_reason_expired">Expired deal</string>
    <string name="report_reason_other">Other</string>
    <string name="report_other_hint">Please describe the issue</string>
    <string name="report_submit_success">Deal reported. Thanks!</string>
    <string name="action_report_title">Report</string>
    <string name="email_failed_to_send">Failed to send Email</string>
    <string name="email_cannot_find_client_app">Cannot find a suitable app for this request</string>
    <string name="email_send_title">Sending from Course Deals app</string>
</resources>
