<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_8">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/dragHandle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_24"
            android:text="@string/submit_deal_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dragHandle" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingHorizontal="@dimen/spacing_24"
            android:paddingBottom="@dimen/spacing_16"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/footerDivider"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSubhead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:text="@string/submit_deal_subhead"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUrl"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_24"
                    android:layout_marginBottom="@dimen/spacing_16"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSubhead"
                    app:startIconDrawable="@drawable/ic_link"
                    app:startIconTint="?attr/colorOnSurfaceVariant">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/url_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textUri"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <View
            android:id="@+id/footerDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_1"
            android:background="?attr/colorOutlineVariant"
            app:layout_constraintBottom_toTopOf="@+id/llActionFooter" />

        <LinearLayout
            android:id="@+id/llActionFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_24"
            android:paddingVertical="@dimen/spacing_16"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_weight="1"
                android:text="@string/btn_submit" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
